--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><strong>LunarLander-v2</strong></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/84">2.296613</a></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/87">2.812674</a></td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/96">3.024702</a></td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
@@ -1287,10 +1287,10 @@ When developing a new algorithm, use the session graph to immediately see how th
 </thead><tbody>
 <tr>
 <td style="text-align: left">LunarLander-v2</td>
-<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/87">2.812674</a></td>
-<td style="text-align: left">247</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/96">3.024702</a></td>
+<td style="text-align: left">200</td>
 <td style="text-align: left">kengz/lgraesser</td>
-<td style="text-align: left">lunar_double_dqn</td>
+<td style="text-align: left">lunar_offpol_sarsa</td>
 </tr>
 <tr>
 <td style="text-align: left">LunarLanderContinuous-v2</td>
