publish: update title
generated from commit db854f7dc637caed42f1df7dadb8f01d52f83869

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
 <p>With OpenAI Lab, we could focus on researching the essential elements of reinforcement learning such as the algorithm, policy, memory (experience replay), and parameter tuning to solve the OpenAI environments. We could also test our hypotheses more reliably.</p>
 
-<p>See the <a href="#solutions">Best Solutions</a> to some OpenAI environments that OpenAI Lab users have produced.</p>
+<p>See the <a href="#solutions">Solutions</a> to some OpenAI environments that OpenAI Lab users have produced.</p>
 
 <h3 id="run-the-lab">Run the Lab</h3>
 
@@ -656,7 +656,7 @@ An experiment runs the variations of agent by changing its parameters (experimen
 
           <h1 id="analysis"><a name="analysis"></a>Analysis</h1>
 
-<p>Once the Lab is running experiments, it will produce data. This section details how to analyze and understand the data, before we can contribute to the <a href="#solutions">Best Solutions</a>.</p>
+<p>Once the Lab is running experiments, it will produce data. This section details how to analyze and understand the data, before we can contribute to the <a href="#solutions">Solutions</a>.</p>
 
 <p>An experiment produces 3 types of data files in the folder <code class="prettyprint">data/&lt;experiment_id&gt;/</code>:</p>
 
