--- a/index.html
+++ b/index.html
@@ -990,8 +990,8 @@ When developing a new algorithm, use the session graph to immediately see how th
 <tr>
 <td style="text-align: left"><strong>Acrobot-v1</strong></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/94">-0.1706583</a></td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/98">-0.1755333</a></td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/97">-0.1626845</a></td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
@@ -1243,10 +1243,10 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left">Acrobot-v1</td>
-<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/94">-0.1706583</a></td>
-<td style="text-align: left">-100.96</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/97">-0.1626845</a></td>
+<td style="text-align: left">-120.16</td>
 <td style="text-align: left">kengz/lgraesser</td>
-<td style="text-align: left">rand_acrobot</td>
+<td style="text-align: left">acrobot_offpol_sarsa</td>
 </tr>
 <tr>
 <td style="text-align: left">MountainCar-v0</td>
