--- a/index.html
+++ b/index.html
@@ -1875,11 +1875,16 @@ Target (y vals):  [R + \gamma E_a Q(S&rsquo;, a)]</p>
 
 <p>When you&rsquo;re heels down implementing an algorithm and the extra 90% side components from scratch, it&rsquo;s hard to organize your work from a high level. Having to worry about other irrelevant components also makes you lose focus. The Lab removes that inertia and frees us from that myopic vision.</p>
 
-<p>This freedom means more mental energy and time to focus on the essential components of research. It opens up new adjacent possibles and has us asking new questions. Below are a few things that we came up due to this freedom of high level vision:</p>
+<p>This freedom means more mental energy and time to focus on the essential components of research. It opens up new adjacent possibles and has us asking new questions.</p>
+
+<p><strong>The New Adjacent Possibles</strong></p>
+
+<p>With those problems above resolved, the Lab opens up the new adjacent possibles and allows us to do more. Below are some:</p>
 
 <ul>
-<li>independently discovery of RankedMemory, which is essentially the Priorized Experience Replay (PER) idea.</li>
+<li>independent discovery of RankedMemory, which is essentially the Priorized Experience Replay (PER) idea.</li>
 <li>the study of hyperparameters at scale, with the <a href="#analysis">Analysis Graph</a>.</li>
+<li>an explosion of experiments; suddenly we have the ability to test a lot of ideas quickly.</li>
 <li>new high level, powerful visuals from the <a href="#analysis">analysis graphs</a> to eyeball the performance and potentials of an agent.</li>
 <li>auto-architecture of agent&rsquo;s neural net, because we wanted to study some variables of the NN architecture as hyperparameters.</li>
 <li>the perspective of RL as experimental science, and experimenting as breeding agents in the environments.</li>
@@ -1890,14 +1895,22 @@ Target (y vals):  [R + \gamma E_a Q(S&rsquo;, a)]</p>
 
           <h1 id="contributing"><a name="contributing"></a>Contributing</h1>
 
+<ul>
+<li>Invented a new algorithm/added some features? Submit a <a href="https://github.com/kengz/openai_lab/pulls">Pull Request here</a>.</li>
+<li>Created some stronger agents that beats the current results? Read <a href="#solutions">here to submit new solution</a>.</li>
+<li>Wanna just talk? Hit us up on Twitter below.</li>
+</ul>
+
 <h2 id="authors">Authors</h2>
 
 <p><em>Note: we are not affiliated with OpenAI; the OpenAI Lab is not tied to any organizations.</em></p>
 
 <ul>
-<li>Wah Loon Keng</li>
-<li>Laura Graesser</li>
+<li>Wah Loon Keng. <a href="https://twitter.com/kengzwl">twitter: @kengzwl</a></li>
+<li>Laura Graesser. <a href="https://twitter.com/lgraesser3">twitter: @lgraesser3</a></li>
 </ul>
+
+<p><em>OpenAI notice us please.</em></p>
 
       </div>
       <div class="dark-box">
