publish: update intro
generated from commit 524b5fe0295e2dab2bf0a931e5f1cc28d216ad62

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <div class="content">
         <h1 id="openai-lab">OpenAI Lab </br> <a href="https://circleci.com/gh/kengz/openai_lab"><img src="https://circleci.com/gh/kengz/openai_lab.svg?style=shield" alt="CircleCI" /></a> <a href="https://www.codacy.com/app/kengzwl/openai_lab?utm_source=github.com&amp;amp;utm_medium=referral&amp;amp;utm_content=kengz/openai_lab&amp;amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/9e55f845b10b4b51b213620bfb98e4b3" alt="Codacy Badge" /></a> <a href="https://www.codacy.com/app/kengzwl/openai_lab?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=kengz/openai_lab&amp;utm_campaign=Badge_Coverage"><img src="https://api.codacy.com/project/badge/Coverage/9e55f845b10b4b51b213620bfb98e4b3" alt="Codacy Badge" /></a> <a href="https://github.com/kengz/openai_lab"><img src="https://img.shields.io/github/forks/kengz/openai_lab.svg?style=social&amp;label=Fork" alt="GitHub forks" /></a> <a href="https://github.com/kengz/openai_lab"><img src="https://img.shields.io/github/stars/kengz/openai_lab.svg?style=social&amp;label=Star" alt="GitHub stars" /></a></h1>
 
-<p><em>An experimentation system for Reinforcement Learning using OpenAI Gym and Keras.</em></p>
+<p><em>An experimentation system for Reinforcement Learning using OpenAI Gym, Tensorflow, and Keras.</em></p>
 
 <p>The <em>OpenAI Lab</em> is created to do Reinforcement Learning (RL) like science - <em>theorize, experiment</em>. It provides an easy to use interface to <a href="https://gym.openai.com/">OpenAI Gym</a> and <a href="https://keras.io/">Keras</a>, combined with an automated experiment and evaluation framework.</p>
 
@@ -222,6 +222,8 @@
 <p>With OpenAI Lab, we could focus on researching the essential elements of reinforcement learning such as the algorithm, policy, memory, and parameter tuning. It allows us to build agents efficiently using existing components with the implementations from research ideas. We could then test the research hypotheses systematically by running experiments.</p>
 
 <p>See the <a href="#solutions">Solutions</a> to some OpenAI environments that the Lab users have produced.</p>
+
+<p><em>Ultimately, the Lab is a generalized framework for doing reinforcement learning, agnostic of OpenAI Gym and Keras. Pytorch-based implementations are on the roadmap, for example.</em></p>
 
 <h3 id="run-the-lab">Run the Lab</h3>
 
@@ -1910,7 +1912,7 @@ Target (y vals):  [R + \gamma E_a Q(S&rsquo;, a)]</p>
 <li>Laura Graesser. <a href="https://twitter.com/lgraesser3">twitter: @lgraesser3</a></li>
 </ul>
 
-<p><em>OpenAI notice us please.</em></p>
+<p><em>OpenAI we hope you find this useful!</em></p>
 
       </div>
       <div class="dark-box">
