--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ python3 main.py -bp -t 5 -e dqn | tee -a ./data/terminal.log;
 
           <h1 id="experiments"><a name="experiments"></a>Experiments</h1>
 
-<p>The experimental framework design and terminology should be familiar, since they&rsquo;re borrowed from experimental science. The Lab runs <strong>experiments</strong> and produces data for <a href="#analysis">analysis</a>.</p>
+<p>The experimental framework design and terminology should be familiar, since they&rsquo;re borrowed from experimental science. The Lab runs experiments and produces data for <a href="#analysis">analysis</a>.</p>
 
 <h2 id="definition">Definition</h2>
 
@@ -997,16 +997,16 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left"><strong>MountainCarContinuous-v0</strong></td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>Pendulum-v0</strong></td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
@@ -1018,9 +1018,9 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left"><strong>LunarLanderContinuous-v2</strong></td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
@@ -1251,16 +1251,16 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left">MountainCarContinuous-v0</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
 <td style="text-align: left">Pendulum-v0</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left">-</td>
 </tr>
 </tbody></table>
@@ -1285,9 +1285,9 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left">LunarLanderContinuous-v2</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
+<td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
