publish: add debug flag
generated from commit 7edb32c9bfcbd79c17c62b180752123f83077836

--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@ grunt clear
 <li><code class="prettyprint">-resume</code>: resume incomplete experiments from <code class="prettyprint">config/history.json</code></li>
 <li><code class="prettyprint">-remote</code>: when running over SSH, supplies this to use a fake display</li>
 <li><code class="prettyprint">-best</code>: run the finalized experiments with gym rendering and live plotting; without param selection. This uses the default <code class="prettyprint">param</code> in <code class="prettyprint">experiment_specs.json</code> that shall be updated to the best found.</li>
+<li><code class="prettyprint">-debug</code>: verbose debug logging. This is for lab-level development only.</li>
 <li><code class="prettyprint">-quiet</code>: mute all python logging in grunt. This is for lab-level development only.</li>
 </ul>
 
